# blackheap

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  README.md  main.c  run_b2b.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_all.yml  c.yml  rust.yml  rust_check.yml  rust_clippy.yml  rust_fmt.yml  ts.yml
SLURM/: Emmy.sh  Emmy_lokal.sh  Emmy_scratch.sh  SCC.sh
backheap-benchmark/: Makefile  compile_commands.json
backheap-benchmark/src/: helper.h  io_benchmark.h  output.c
benchmarker/: io_benchmark.c  main.c
blackheap/: Cargo.toml
blackheap-analyzer/: Cargo.toml
blackheap-benchmark/: .gitignore  Makefile  README.md
blackheap-benchmark/src/: arg_parser.c  arg_parser.h  helper.c  helper.h  io_benchmark.c  output.c  output.h
blackheap-benchmarker/: Cargo.toml  build.rs  regenerate_types.sh
blackheap-benchmarker/src/: lib.rs
blackheap-core/: Cargo.toml
blackheap-frontend/: .prettierignore  README.md  package.json  tailwind.config.js
blackheap-frontend/config/: webpack.config.js
blackheap-frontend/public/: index.html
blackheap-frontend/src/: Start.tsx  index.css  index.tsx
blackheap-modeller/: .gitignore  Cargo.toml
blackheap-modeller/assets/: README_TO_EMBED.md
blackheap-modeller/frontend/: model_summary.html  single_model.html  use_model_report.html
blackheap-modeller/src/: analyzer.rs  assets.rs  benchmark_wrapper.rs  cli.rs  create_model.rs  frontend.rs  main.rs
blackheap/assets/: README.md  build_models.py  requirements.txt  verify_model.py
blackheap/src/: benchmark.rs  cli.rs  main.rs
blackheap/src/assets/: mod.rs  progress.rs
docs/: README.md  book.toml
docs/book/: 404.html  Architecture.html  Build.html  FileFormats.html  Introduction.html  Quickstart.html  SingleNode.html  StreamedClassifications.html  index.html  print.html  searchindex.js  searchindex.json
frontend/: model_summary.stpl  single_model.html  use_model_report.html
io-benchmarker/: Cargo.toml  build.rs
io-benchmarker/src/: arg_parser.c  arg_parser.h  helper.c  io_benchmark.c  wrapper.h
io-modeller/: .gitignore  Cargo.toml
io-modeller/frontend/: model_summary.html
io-modeller/src/: analyzer.rs  benchmark_wrapper.rs  cli.rs
io-modeller/src/analyzer/: json_reader.rs  kde.rs
io-modeller/src/subprograms/: create_model.rs  use_model.rs
preloadee/: .gitignore  Makefile  main  main.c  preloadee.c
src/: analyzer.rs  benchmark_wrapper.rs  cli.rs  frontend.rs  html_templater.rs  main.c  main.rs  subprograms.rs
templates/: result.stpl  single_model.html  single_model.stpl
(+81 files in other folders)
